k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: expanders360
  labels:
    name: expanders360
    environment: production
